added contact me work  name and resume

--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-     <!--Changed the title of the website name-->
-    <title>Horiseon Management</title>
+     <!--Changed the title of the website name for module 2-->
+    <title>Frank Alvarez's Portfolio</title>
 </head>
 
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1><span class="name">Frank Alvarez</span></h1>
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">About me</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management">Work</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing">Contact me</a>
+                </li>
+                <li>
+                    <!--TODO: add punch out link to resume here-->
+                    <!--<a href="">Resume</a>-->
+
                 </li>
             </ul>
         </div>
