--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">About me</a>
+                    <a href="#about-me">About me</a>
                 </li>
                 <li>
                     <a href="#online-reputation-management">Work</a>
@@ -33,12 +33,11 @@
     <!-- this line below shows the human picture -->
     <div class="hero"></div>
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+        <div id="about-me" class="about-me">
+            <img src="./assets/images/frank-fish-dog.jpeg" class="float-left" />
+            <h2>About me</h2>
             <p>
-                <!--Made website more accessible for disabled people-->
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business. It ensures that people with disabilities can access a website using assistive technologies such as video captions, screen readers, and braille keyboards.
+                My name is Frank and I love to fish and hang out with my dog. I also enjoy playing golf, fixing boats and being in the ocean. I also enjoy working on computers and playing video games. Lastly, I like to play music and listen to music.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
