--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#about-me">About me</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
                     <a href="#social-media-marketing">Contact me</a>
@@ -30,7 +30,6 @@
             </ul>
         </div>
     </div>
-    <!-- this line below shows the human picture -->
     <div class="hero"></div>
     <div class="content">
         <div id="about-me" class="about-me">
@@ -40,11 +39,12 @@
                 My name is Frank and I love to fish and hang out with my dog. I also enjoy playing golf, fixing boats and being in the ocean. I also enjoy working on computers and playing video games. Lastly, I like to play music and listen to music.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="work" class="work">
+            <!-- TODO: add work image here tomorrow -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
+            <h2>Work</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                Work text
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
