--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
     <div class="content">
         <div id="about-me" class="about-me">
             <img src="./assets/images/frank-fish-dog.jpeg" class="float-left" />
@@ -41,10 +40,14 @@
         </div>
         <div id="work" class="work">
             <!-- TODO: add work image here tomorrow -->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/work.png" class="float-right" />
             <h2>Work</h2>
             <p>
-                Work text
+                This is my first project that i built for people with disabilities for a marketing agency.
+            </p>
+            <br>
+            <p>
+                <a href="https://github.com/Franko88Bit/Frank-Alvarez-Module-1">Project 1 (click me)</a>
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
