added my linkedin to my resume

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                     <a href="#social-media-marketing">Contact me</a>
                 </li>
                 <li>
-                    <!--TODO: add punch out link to resume here-->
-                    <!--<a href="">Resume</a>-->
-
+                    <a href="https://www.linkedin.com/in/frank-alvarez-091b19271/">Resume</a>
                 </li>
             </ul>
         </div>
