made contact me section clickable

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
             </p>
         </div>
         <div id="work" class="work">
-            <!-- TODO: add work image here tomorrow -->
+            <!-- made my first application image clickable to access live local host url -->
+            <a href="https://franko88bit.github.io/Frank-Alvarez-Module-1/">
             <img src="./assets/images/work.png" class="float-right" />
+            </a>
             <h2>Work</h2>
             <p>
                 This is my first project that i built for people with disabilities for a marketing agency.
@@ -48,11 +50,20 @@
                 <a href="https://github.com/Franko88Bit/Frank-Alvarez-Module-1">Project 1 (click me)</a>
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
+        <div id="contact-me" class="contact-me">
+            <img src="./assets/images/contact_me.jpeg" class="float-left" />
+            <h2>Contact me</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Phone number: 7864364898 
+                <br>
+                <br>
+                Email Address: franks1988@icloud.com
+                <br>
+                <br>
+                <a href="https://github.com/Franko88Bit">Github (click me)</a>
+                <br> 
+                <br>
+                <a href="https://www.linkedin.com/in/frank-alvarez-091b19271/">LinkedIn (click me)</a>
             </p>
         </div>
     </div>
@@ -81,9 +92,6 @@
     </div>
     <div class="footer">
         <h2>Made by Frank Alvarez </h2>
-        <p>
-            &copy; Horiseon Management
-        </p>
     </div>
 </body>
 
