--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Contact me</a>
+                    <a href="#contact-me">Contact me</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/frank-alvarez-091b19271/">Resume</a>
@@ -48,6 +48,9 @@
             <br>
             <p>
                 <a href="https://github.com/Franko88Bit/Frank-Alvarez-Module-1">Project 1 (click me)</a>
+                <br>
+                <br>
+                Note: image to the right is also clickable
             </p>
         </div>
         <div id="contact-me" class="contact-me">
@@ -64,29 +67,6 @@
                 <br> 
                 <br>
                 <a href="https://www.linkedin.com/in/frank-alvarez-091b19271/">LinkedIn (click me)</a>
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
