added upcoming projects and placeholders

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 <br>
                 <br>
                 Note: image to the right is also clickable
+                <br>
+                <br>
+                Project 2 (under construction) (image placeholder)
+                <br>
+                <br>
+                Project 3 (in progress...) (image placeholder)
             </p>
         </div>
         <div id="contact-me" class="contact-me">
